Change createTables to ORM and delete * from SQL query